--- a/notes/probability.html
+++ b/notes/probability.html
@@ -14,6 +14,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.8.0/p5.js"></script>
     <script type="text/javascript" async="" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-MML-AM_CHTML"></script>
     <script referrerpolicy="no-referrer-when-downgrade" type="text/javascript" src="https://api.onelink-preview.com/moxie.min.js" data-oljs="P123E-BDEF-2FE3-FD20"></script>
+    <style>
+        .boxed{border-left:4px solid #7c9cff;padding:12px;background:#f3f6ff;border-radius:6px}
+        ol li{margin:8px 0}
+        .math{font-family: "Courier New", monospace;background:#fff8e1;padding:8px;border-radius:6px}
+        footer{margin-top:2rem;color:#666;font-size:.9rem}
+    </style>
   </head>
   <body>
     <nav>
@@ -31,7 +37,7 @@
     </nav>
     <br>
     <br>
- 
+
             <main onclick="closemenu()">
                 <script src="./js/randomball.js"></script>
             </main>
@@ -53,9 +59,67 @@
                 In probability theory, conditional probability is a measure of the probability of an event occurring, given that another event (by assumption, presumption, assertion or evidence) is already known to have occurred. This particular method relies on event A occurring with some sort of relationship with another event B. This can be written by :
             </div>
             <span class="math display">\[ P(A \lvert B) = \frac{P(B \lvert A)P(A)}{P(B)} \]</span>
+            <br>
 
+            <div class="para">
 
-    <br>
+                <h4>Monty Hall Problem — Bayes' Theorem Explanation</h4>
+                <p>
+                    The Monty Hall problem is a probability puzzle based on a game show scenario with three doors.
+                    You pick one door; the host, who knows what's behind each door, opens another door revealing a goat; then
+                    you are offered the choice to stay with your original door or switch to the remaining closed door.
+                </p>
+                <h2>Summary answer</h2>
+                <br>
+                <div class="boxed">
+                  If you <em>switch</em> after the host opens a goat door, your probability of winning the car is <em>2/3</em>.<br>
+                  If you <em>stay</em> with your original choice, your probability is <em>1/3</em>.
+                </div>
+                <br
+
+                <h2>Formal derivation with Bayes' theorem</h2>
+                <p>Notation (label the doors 1, 2, 3). Suppose you initially choose door 1. Define events:</p>
+                <ul>
+                    <li>A<sub>1</sub> = "the car is behind door 1"</li>
+                    <li>A<sub>2</sub> = "the car is behind door 2"</li>
+                    <li>A<sub>3</sub> = "the car is behind door 3"</li>
+                    <li>B = "the host opens door 3" (revealing a goat)</li>
+                </ul>
+
+                <p>We want the posterior probabilities P(A<sub>i</sub> | B). Bayes' theorem says</p>
+                <pre class="math">P(A_i | B) = P(B | A_i) * P(A_i) / P(B)</pre>
+
+                <p>Start with the priors (before the host opens any door):</p>
+                <pre class="math">P(A1) = P(A2) = P(A3) = 1/3</pre>
+
+                <p>Compute the likelihoods P(B | A<sub>i</sub>) — the chance the host opens door 3 given where the car actually is:</p>
+                <ol>
+                    <li><strong>If the car is behind door 1 (A<sub>1</sub>)</strong>: then the host must open either door 2 or door 3. If the host chooses uniformly at random between the two goat doors, the probability he opens door 3 is <code>1/2</code>. So <code>P(B | A1) = 1/2</code>.</li>
+                    <li><strong>If the car is behind door 2 (A<sub>2</sub>)</strong>: the host cannot open door 2 (it has the car) and must open door 3 (the only goat door left). So <code>P(B | A2) = 1</code>.</li>
+                    <li><strong>If the car is behind door 3 (A<sub>3</sub>)</strong>: the host will not open door 3 because it hides the car. So <code>P(B | A3) = 0</code>.</li>
+                </ol>
+
+                <p>Compute the total probability P(B) by the law of total probability:</p>
+                <pre class="math">P(B) = Σ_i P(B | A_i) P(A_i) = (1/2)*(1/3) + 1*(1/3) + 0*(1/3) = 1/6 + 1/3 = 1/2</pre>
+
+                <p>Now apply Bayes' theorem to get the posteriors.</p>
+                <pre class="math">P(A1 | B) = (P(B | A1) * P(A1)) / P(B) = (1/2 * 1/3) / (1/2) = (1/6) / (1/2) = 1/3</pre>
+
+                <pre class="math">P(A2 | B) = (P(B | A2) * P(A2)) / P(B) = (1 * 1/3) / (1/2) = (1/3) / (1/2) = 2/3</pre>
+
+                <pre class="math">P(A3 | B) = 0</pre>
+
+                <p>Interpretation: after the host opens door 3, the probability the car is behind your original choice (door 1) is still <strong>1/3</strong>, and the probability it is behind the other unopened door (door 2) is <strong>2/3</strong>. So switching doubles your chance of winning.</p>
+
+                <h2>Short intuitive explanation</h2>
+                <p>
+                    When you first pick a door you have a 1/3 chance of being right and a 2/3 chance of being wrong. The host's action of opening a goat door does not change the initial 1/3 chance your chosen door had — instead it concentrates the original 2/3 probability of "car is not behind your door" onto the single unopened door the host left. Thus switching wins with probability 2/3.
+                </p>
+
+                <h2>Generalization to n doors</h2>
+                <p>With <em>n</em> doors, you pick one (probability 1/n of being correct). The host — who knows where the prize is — opens <em>n−2</em> goat doors, leaving one other closed door. If the host always avoids the prize and never opens your picked door, switching to the single remaining closed door yields probability (n−1)/n of winning (because the initial 1/n chance you picked correctly remains with your original door, and the complementary (n−1)/n probability transfers to the other unopened door).</p>
+                <p>With <em>n</em> doors, you pick one (probability 1/n of being correct). The host — who knows where the prize is — opens <em>n−2</em> goat doors, leaving one other closed door. If the host always avoids the prize and never opens your picked door, switching to the single remaining closed door yields probability (n−1)/n of winning (because the initial 1/n chance you picked correctly remains with your original door, and the complementary (n−1)/n probability transfers to the other unopened door).</p>
+            </div>
     <footer>
         &nbsp;
     </footer>
